--- a/arch/arm/configs/exynos5430-a8elteskt_defconfig
+++ b/arch/arm/configs/exynos5430-a8elteskt_defconfig
@@ -37,8 +37,8 @@ CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -2999,7 +2999,7 @@ CONFIG_USB_U_SERIAL=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
